--- a/Seminarkurs/Chaotisches Pendel.ipynb
+++ b/Seminarkurs/Chaotisches Pendel.ipynb
@@ -12,12 +12,14 @@
     "\n",
     "https://de.wikipedia.org/wiki/Doppelpendel\n",
     "\n",
-    "https://www.leifiphysik.de/mechanik/mechanische-schwingungen/grundwissen/fadenpendel"
+    "https://www.leifiphysik.de/mechanik/mechanische-schwingungen/grundwissen/fadenpendel\n",
+    "\n",
+    "https://www.leifiphysik.de/mechanik/mechanische-schwingungen/ausblick/kraefte-beim-fadenpendel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "303bdb7a",
    "metadata": {},
    "outputs": [
@@ -39,7 +41,7 @@
     "\n",
     "g = 9.81\n",
     "\n",
-    "m1 = 0  # Masse\n",
+    "m1 = 5  # Masse\n",
     "l1 = 0.20  # Länge\n",
     "w1 = math.sqrt(g/l1)  # Auslenkung vom Lot\n",
     "\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3e28a14a",
    "metadata": {},
    "outputs": [
@@ -260,42 +262,42 @@
        "</style>\n",
        "\n",
        "<div class=\"animation\">\n",
-       "  <img id=\"_anim_img3e89eec63ef14258b0034b98b2ef5925\">\n",
+       "  <img id=\"_anim_img02d772ad51134cf6a858f4417eb3188d\">\n",
        "  <div class=\"anim-controls\">\n",
-       "    <input id=\"_anim_slider3e89eec63ef14258b0034b98b2ef5925\" type=\"range\" class=\"anim-slider\"\n",
+       "    <input id=\"_anim_slider02d772ad51134cf6a858f4417eb3188d\" type=\"range\" class=\"anim-slider\"\n",
        "           name=\"points\" min=\"0\" max=\"1\" step=\"1\" value=\"0\"\n",
-       "           oninput=\"anim3e89eec63ef14258b0034b98b2ef5925.set_frame(parseInt(this.value));\">\n",
+       "           oninput=\"anim02d772ad51134cf6a858f4417eb3188d.set_frame(parseInt(this.value));\">\n",
        "    <div class=\"anim-buttons\">\n",
-       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.slower()\">\n",
+       "      <button title=\"Decrease speed\" aria-label=\"Decrease speed\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.slower()\">\n",
        "          <i class=\"fa fa-minus\"></i></button>\n",
-       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.first_frame()\">\n",
+       "      <button title=\"First frame\" aria-label=\"First frame\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.first_frame()\">\n",
        "        <i class=\"fa fa-fast-backward\"></i></button>\n",
-       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.previous_frame()\">\n",
+       "      <button title=\"Previous frame\" aria-label=\"Previous frame\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.previous_frame()\">\n",
        "          <i class=\"fa fa-step-backward\"></i></button>\n",
-       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.reverse_animation()\">\n",
+       "      <button title=\"Play backwards\" aria-label=\"Play backwards\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.reverse_animation()\">\n",
        "          <i class=\"fa fa-play fa-flip-horizontal\"></i></button>\n",
-       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.pause_animation()\">\n",
+       "      <button title=\"Pause\" aria-label=\"Pause\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.pause_animation()\">\n",
        "          <i class=\"fa fa-pause\"></i></button>\n",
-       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.play_animation()\">\n",
+       "      <button title=\"Play\" aria-label=\"Play\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.play_animation()\">\n",
        "          <i class=\"fa fa-play\"></i></button>\n",
-       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.next_frame()\">\n",
+       "      <button title=\"Next frame\" aria-label=\"Next frame\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.next_frame()\">\n",
        "          <i class=\"fa fa-step-forward\"></i></button>\n",
-       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.last_frame()\">\n",
+       "      <button title=\"Last frame\" aria-label=\"Last frame\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.last_frame()\">\n",
        "          <i class=\"fa fa-fast-forward\"></i></button>\n",
-       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim3e89eec63ef14258b0034b98b2ef5925.faster()\">\n",
+       "      <button title=\"Increase speed\" aria-label=\"Increase speed\" onclick=\"anim02d772ad51134cf6a858f4417eb3188d.faster()\">\n",
        "          <i class=\"fa fa-plus\"></i></button>\n",
        "    </div>\n",
-       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select3e89eec63ef14258b0034b98b2ef5925\"\n",
+       "    <form title=\"Repetition mode\" aria-label=\"Repetition mode\" action=\"#n\" name=\"_anim_loop_select02d772ad51134cf6a858f4417eb3188d\"\n",
        "          class=\"anim-state\">\n",
-       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_3e89eec63ef14258b0034b98b2ef5925\"\n",
+       "      <input type=\"radio\" name=\"state\" value=\"once\" id=\"_anim_radio1_02d772ad51134cf6a858f4417eb3188d\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio1_3e89eec63ef14258b0034b98b2ef5925\">Once</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_3e89eec63ef14258b0034b98b2ef5925\"\n",
+       "      <label for=\"_anim_radio1_02d772ad51134cf6a858f4417eb3188d\">Once</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"loop\" id=\"_anim_radio2_02d772ad51134cf6a858f4417eb3188d\"\n",
        "             checked>\n",
-       "      <label for=\"_anim_radio2_3e89eec63ef14258b0034b98b2ef5925\">Loop</label>\n",
-       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_3e89eec63ef14258b0034b98b2ef5925\"\n",
+       "      <label for=\"_anim_radio2_02d772ad51134cf6a858f4417eb3188d\">Loop</label>\n",
+       "      <input type=\"radio\" name=\"state\" value=\"reflect\" id=\"_anim_radio3_02d772ad51134cf6a858f4417eb3188d\"\n",
        "             >\n",
-       "      <label for=\"_anim_radio3_3e89eec63ef14258b0034b98b2ef5925\">Reflect</label>\n",
+       "      <label for=\"_anim_radio3_02d772ad51134cf6a858f4417eb3188d\">Reflect</label>\n",
        "    </form>\n",
        "  </div>\n",
        "</div>\n",
@@ -305,9 +307,9 @@
        "  /* Instantiate the Animation class. */\n",
        "  /* The IDs given should match those used in the template above. */\n",
        "  (function() {\n",
-       "    var img_id = \"_anim_img3e89eec63ef14258b0034b98b2ef5925\";\n",
-       "    var slider_id = \"_anim_slider3e89eec63ef14258b0034b98b2ef5925\";\n",
-       "    var loop_select_id = \"_anim_loop_select3e89eec63ef14258b0034b98b2ef5925\";\n",
+       "    var img_id = \"_anim_img02d772ad51134cf6a858f4417eb3188d\";\n",
+       "    var slider_id = \"_anim_slider02d772ad51134cf6a858f4417eb3188d\";\n",
+       "    var loop_select_id = \"_anim_loop_select02d772ad51134cf6a858f4417eb3188d\";\n",
        "    var frames = new Array(40);\n",
        "    \n",
        "  frames[0] = \"data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAoAAAAHgCAYAAAA10dzkAAAAOnRFWHRTb2Z0d2FyZQBNYXRwbG90\\\n",
@@ -18661,7 +18663,7 @@
        "    /* set a timeout to make sure all the above elements are created before\n",
        "       the object is initialized. */\n",
        "    setTimeout(function() {\n",
-       "        anim3e89eec63ef14258b0034b98b2ef5925 = new Animation(frames, img_id, slider_id, 29.0,\n",
+       "        anim02d772ad51134cf6a858f4417eb3188d = new Animation(frames, img_id, slider_id, 29.0,\n",
        "                                 loop_select_id);\n",
        "    }, 0);\n",
        "  })()\n",
@@ -30313,6 +30315,34 @@
     "x = 0\n",
     "\n",
     "x1 = x * math.cos(math.radians(w1*t1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7476c6ef",
+   "metadata": {},
+   "source": [
+    "## <u>12.01.2026</u>: Einfaches Pendel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5299dec0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "m1 = 1.0  # Masse kg\n",
+    "l1 = 0.20  # Länge m\n",
+    "g = 9.81  # Erdbeschleunigung m/s^2\n",
+    "s = 0.30  # Auslenkung in m\n",
+    "\n",
+    "Fg = m1 * g  # Gewichtskraft in Newton\n",
+    "\n"
    ]
   }
  ],
